--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,59 @@ services:
     container_name: kafka
     hostname: kafka
     ports:
-      - "${KAFKA_PORT_INTERNAL}:${KAFKA_PORT_INTERNAL}"
+      - "${KAFKA_PORT_INTERNAL}:${KAFKA_PORT_INTERNAL}" # 9092
+      - "${KAFKA_PORT_EXTERNAL}:${KAFKA_PORT_EXTERNAL}" # 9094
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://:${KAFKA_PORT_INTERNAL},CONTROLLER://:${KAFKA_PORT_CONTROLLER}
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_PORT_INTERNAL}
+      
+      # Cấu hình Listener
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:${KAFKA_PORT_INTERNAL},CONTROLLER://0.0.0.0:${KAFKA_PORT_CONTROLLER},EXTERNAL://0.0.0.0:${KAFKA_PORT_EXTERNAL}
+      
+      # Quan trọng: Khai báo địa chỉ để client kết nối
+      # - PLAINTEXT: Dành cho Spark/Kafka-UI (gọi tới kafka:9092)
+      # - EXTERNAL: Dành cho Python Local (gọi tới localhost:9094)
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_PORT_INTERNAL},EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
+      
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:${KAFKA_PORT_CONTROLLER}
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_NUM_PARTITIONS: 4
+      # Cho phép nhận tin nhắn lên tới 10MB (Bytes)
+      KAFKA_MESSAGE_MAX_BYTES: 10485760 
+      # Cho phép replica fetch dữ liệu lớn
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
     networks:
-      - ${NETWORK_NAME}
+      - bigdata-net
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    healthcheck:
+      # Kiểm tra sức khỏe bằng cách liệt kê topic (Thay vì dùng nc có thể không có sẵn)
+      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092 # Kết nối nội bộ qua port 9092
+    depends_on:
+      kafka:
+        condition: service_healthy
+    networks:
+      - bigdata-net
 
   # -----------------------------------------------------------
   # 2. SPARK MASTER
@@ -33,6 +70,7 @@ services:
       dockerfile: ${SPARK_DOCKERFILE}
     image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
     container_name: spark-master
+    hostname: spark-master
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     ports:
       - "${SPARK_MASTER_WEBUI_PORT}:8080"
@@ -40,17 +78,22 @@ services:
     environment:
       - SPARK_CONF_DIR=/opt/spark/conf
     volumes:
-      - ./data:/opt/data 
+      - ./data:/opt/data
       - ./src:/opt/src
+    depends_on:
+      kafka:
+        condition: service_healthy
     networks:
-      - ${NETWORK_NAME}
+      - bigdata-net
 
   # -----------------------------------------------------------
   # 3. SPARK WORKER
   # -----------------------------------------------------------
   spark-worker:
     image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:${SPARK_MASTER_RPC_PORT}
+    container_name: spark-worker
+    # Kết nối tới spark-master qua hostname
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_CORES=${SPARK_WORKER_CORES}
       - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY}
@@ -60,9 +103,7 @@ services:
       - ./data:/opt/data
       - ./src:/opt/src
     networks:
-      - ${NETWORK_NAME}
-    deploy:
-      replicas: 1
+      - bigdata-net
 
   # -----------------------------------------------------------
   # 4. MINIO (Data Lake)
@@ -78,7 +119,9 @@ services:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     networks:
-      - ${NETWORK_NAME}
+      - bigdata-net
+    volumes:
+      - minio_data:/data
 
   # -----------------------------------------------------------
   # 5. MONGODB (Database)
@@ -91,7 +134,7 @@ services:
     volumes:
       - mongo_data:/data/db
     networks:
-      - ${NETWORK_NAME}
+      - bigdata-net
 
 networks:
   bigdata-net:
@@ -100,3 +143,5 @@ networks:
 
 volumes:
   mongo_data:
+  kafka_data:
+  minio_data:
