--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,42 +10,41 @@ services:
       - "${KAFKA_PORT_INTERNAL}:${KAFKA_PORT_INTERNAL}" # 9092
       - "${KAFKA_PORT_EXTERNAL}:${KAFKA_PORT_EXTERNAL}" # 9094
     environment:
+      # KRaft Mode Configuration for Apache Kafka Official Image
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      
-      # Cấu hình Listener
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:${KAFKA_PORT_INTERNAL},CONTROLLER://0.0.0.0:${KAFKA_PORT_CONTROLLER},EXTERNAL://0.0.0.0:${KAFKA_PORT_EXTERNAL}
-      
-      # Quan trọng: Khai báo địa chỉ để client kết nối
-      # - PLAINTEXT: Dành cho Spark/Kafka-UI (gọi tới kafka:9092)
-      # - EXTERNAL: Dành cho Python Local (gọi tới localhost:9094)
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:${KAFKA_PORT_CONTROLLER}
+
+      # Listener Configuration
+      KAFKA_LISTENERS: PLAINTEXT://:${KAFKA_PORT_INTERNAL},CONTROLLER://:${KAFKA_PORT_CONTROLLER},EXTERNAL://:${KAFKA_PORT_EXTERNAL}
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_PORT_INTERNAL},EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
-      
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:${KAFKA_PORT_CONTROLLER}
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
 
+      # Cluster Configuration
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_NUM_PARTITIONS: 4
-      # Cho phép nhận tin nhắn lên tới 10MB (Bytes)
-      KAFKA_MESSAGE_MAX_BYTES: 10485760 
-      # Cho phép replica fetch dữ liệu lớn
+
+      # Message Size (10MB)
+      KAFKA_MESSAGE_MAX_BYTES: 10485760
       KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
+
+      # Required for KRaft mode
+      CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
     networks:
       - bigdata-net
     volumes:
       - kafka_data:/var/lib/kafka/data
     healthcheck:
-      # Kiểm tra sức khỏe bằng cách liệt kê topic (Thay vì dùng nc có thể không có sẵn)
-      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
-      interval: 10s
+      test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1" ]
+      interval: 15s
       timeout: 10s
-      retries: 5
-      start_period: 30s
+      retries: 10
+      start_period: 60s
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
