--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,23 @@ services:
   # 1. KAFKA (Apache Official - KRaft Mode)
   # -----------------------------------------------------------
   kafka:
-    image: ${KAFKA_IMAGE}
+    image: apache/kafka:3.7.0
     container_name: kafka
     hostname: kafka
     ports:
-      - "${KAFKA_PORT_INTERNAL}:${KAFKA_PORT_INTERNAL}" # 9092
-      - "${KAFKA_PORT_EXTERNAL}:${KAFKA_PORT_EXTERNAL}" # 9094
+      - "9092:9092"   # Port nội bộ cố định
+      - "${KAFKA_PORT_EXTERNAL}:9094" # Port ngoài lấy từ .env
+    env_file: 
+      - .env
     environment:
-      # KRaft Mode Configuration for Apache Kafka Official Image
+      # KRaft Mode Configuration
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:${KAFKA_PORT_CONTROLLER}
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
 
       # Listener Configuration
-      KAFKA_LISTENERS: PLAINTEXT://:${KAFKA_PORT_INTERNAL},CONTROLLER://:${KAFKA_PORT_CONTROLLER},EXTERNAL://:${KAFKA_PORT_EXTERNAL}
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_PORT_INTERNAL},EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -27,14 +29,14 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_NUM_PARTITIONS: 4
+      KAFKA_NUM_PARTITIONS: ${KAFKA_NUM_PARTITIONS}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: ${KAFKA_REPLICATION_FACTOR}
 
-      # Message Size (10MB)
       KAFKA_MESSAGE_MAX_BYTES: 10485760
       KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
-
-      # Required for KRaft mode
+      
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
     networks:
       - bigdata-net
     volumes:
@@ -53,7 +55,7 @@ services:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092 # Kết nối nội bộ qua port 9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     depends_on:
       kafka:
         condition: service_healthy
@@ -66,19 +68,23 @@ services:
   spark-master:
     build:
       context: .
-      dockerfile: ${SPARK_DOCKERFILE}
-    image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
+      dockerfile: docker/spark.Dockerfile
+    image: my-apache-spark:3.5
     container_name: spark-master
     hostname: spark-master
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     ports:
       - "${SPARK_MASTER_WEBUI_PORT}:8080"
-      - "${SPARK_MASTER_RPC_PORT}:7077"
+      - "7077:7077"
+    env_file:
+      - .env
     environment:
       - SPARK_CONF_DIR=/opt/spark/conf
+      - PYTHONPATH=/opt
     volumes:
       - ./data:/opt/data
       - ./src:/opt/src
+      - ./scripts:/opt/scripts
     depends_on:
       kafka:
         condition: service_healthy
@@ -89,34 +95,40 @@ services:
   # 3. SPARK WORKER
   # -----------------------------------------------------------
   spark-worker:
-    image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
-    container_name: spark-worker
-    # Kết nối tới spark-master qua hostname
+    image: my-apache-spark:3.5
+    # container_name: spark-worker
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_CORES=${SPARK_WORKER_CORES}
       - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY}
+      - PYTHONPATH=/opt
+    env_file:
+      - .env
     depends_on:
       - spark-master
     volumes:
       - ./data:/opt/data
       - ./src:/opt/src
+      - ./scripts:/opt/scripts
     networks:
       - bigdata-net
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
 
   # -----------------------------------------------------------
   # 4. MINIO (Data Lake)
   # -----------------------------------------------------------
   minio:
-    image: ${MINIO_IMAGE}
+    image: minio/minio:latest
     container_name: minio
     ports:
-      - "${MINIO_API_PORT}:9000"
+      - "9000:9000"
       - "${MINIO_CONSOLE_PORT}:9001"
     command: server /data --console-address ":9001"
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    env_file:
+      - .env
     networks:
       - bigdata-net
     volumes:
@@ -126,44 +138,89 @@ services:
   # 5. MONGODB (Database)
   # -----------------------------------------------------------
   mongodb:
-    image: ${MONGO_IMAGE}
+    image: mongo:latest
     container_name: mongodb
     ports:
-      - "${MONGO_PORT}:27017"
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
     networks:
       - bigdata-net
   
   # -----------------------------------------------------------
-  # 6. Sync songs data to MongoDB
+  # 6. JOBS & APPS (Đổi tên & Thêm mới)
   # -----------------------------------------------------------
-  etl-sync:
-    image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
-    container_name: music-etl-sync
-    user: root # Để có quyền đọc file
+  # [JOB] Service đồng bộ Master Data vào MongoDB hàng ngày
+  # job-sync-master:
+  #   image: my-apache-spark:3.5
+  #   container_name: job-sync-master
+  #   user: root 
+  #   depends_on:
+  #     - mongodb
+  #     - spark-master
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - PYTHONPATH=/opt
+  #   volumes:
+  #     - ./src:/opt/src
+  #     - ./data:/opt/data
+  #   command: >
+  #     /bin/bash -c "
+  #     pip install pymongo && 
+  #     while true; do 
+  #       echo '🚀 Starting Master Data Sync Job...';
+  #       if python3 -u /opt/src/pipelines/batch/import_master_songs.py; then
+  #         echo '✅ Sync Success! Sleeping for 24 hours...';
+  #         sleep 86400; 
+  #       else
+  #         echo '❌ Sync Failed! Retrying in 10 seconds...';
+  #         sleep 10;
+  #       fi
+  #     done"
+  #   networks:
+  #     - bigdata-net
+
+  spark-job-runner:
+    image: my-apache-spark:3.5
+    container_name: spark-job-runner
     depends_on:
-      - mongodb
+      - kafka
       - spark-master
+      - minio
+    env_file:
+      - .env
+    environment:
+      - PYTHONPATH=/opt
     volumes:
       - ./src:/opt/src
       - ./data:/opt/data
+      - ./scripts:/opt/scripts 
+    # Chạy script quản lý quy trình
+    # command: ["/bin/bash", "/opt/scripts/start_pipeline.sh"]
+    command: tail -f /dev/null
+    networks:
+      - bigdata-net
+
+  # [APP] Service mới cho Web/API
+  web-app:
+    image: my-apache-spark:3.5
+    container_name: music-web-app
+    ports:
+      - "${WEB_APP_PORT}:8000"
+    depends_on:
+      - mongodb
+    env_file:
+      - .env
+    volumes:
+      - ./src:/opt/src
+    # Cài thư viện và chạy Uvicorn
     command: >
       /bin/bash -c "
-      pip install pymongo && 
-      while true; do 
-        echo '🚀 Starting Daily Sync Job...';
-        
-        # Chạy Python và kiểm tra kết quả
-        if python3 -u /opt/src/2_processing/sync_master_data.py; then
-          echo '✅ Sync Success! Sleeping for 24 hours...';
-          sleep 86400;  # 86400 giây = 24 giờ
-        else
-          echo '❌ Sync Failed! Retrying in 10 seconds...';
-          sleep 10;     # Ngủ 10s rồi thử lại ngay, tránh spam log liên tục
-        fi
-        
-      done"
+      uvicorn src.app.main:app --host 0.0.0.0 --port 8000 --reload
+      "
+    networks:
+      - bigdata-net
 
 networks:
   bigdata-net:
