--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,6 +135,57 @@ services:
     networks:
       - bigdata-net
 
+  # -----------------------------------------------------------
+  # 6. ETCD (Metadata Storage for Milvus)
+  # -----------------------------------------------------------
+  etcd:
+    image: quay.io/coreos/etcd:v3.5.5
+    container_name: milvus-etcd
+    environment:
+      - ETCD_AUTO_COMPACTION_MODE=revision
+      - ETCD_AUTO_COMPACTION_RETENTION=1000
+      - ETCD_QUOTA_BACKEND_BYTES=4294967296
+      - ETCD_SNAPSHOT_COUNT=50000
+    volumes:
+      - etcd_data:/etcd
+    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    healthcheck:
+      test: [ "CMD", "etcdctl", "endpoint", "health" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    networks:
+      - bigdata-net
+
+  # -----------------------------------------------------------
+  # 7. MILVUS (Vector Database)
+  # -----------------------------------------------------------
+  milvus:
+    image: milvusdb/milvus:v2.3.3
+    container_name: milvus-standalone
+    command: [ "milvus", "run", "standalone" ]
+    environment:
+      ETCD_ENDPOINTS: etcd:2379
+      MINIO_ADDRESS: minio:9000
+      MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
+      MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - milvus_data:/var/lib/milvus
+    ports:
+      - "${MILVUS_PORT}:19530"
+      - "${MILVUS_GRPC_PORT}:9091"
+    depends_on:
+      - etcd
+      - minio
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9091/healthz" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
+    networks:
+      - bigdata-net
+
 networks:
   bigdata-net:
     name: ${NETWORK_NAME}
@@ -144,3 +195,5 @@ volumes:
   mongo_data:
   kafka_data:
   minio_data:
+  etcd_data:
+  milvus_data:
