--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,23 @@ services:
   # 1. KAFKA (Apache Official - KRaft Mode)
   # -----------------------------------------------------------
   kafka:
-    image: ${KAFKA_IMAGE}
+    image: apache/kafka:3.7.0
     container_name: kafka
     hostname: kafka
     ports:
-      - "${KAFKA_PORT_INTERNAL}:${KAFKA_PORT_INTERNAL}" # 9092
-      - "${KAFKA_PORT_EXTERNAL}:${KAFKA_PORT_EXTERNAL}" # 9094
+      - "9092:9092" # Port nội bộ cố định
+      - "${KAFKA_PORT_EXTERNAL}:9094" # Port ngoài lấy từ .env
+    env_file:
+      - .env
     environment:
-      # KRaft Mode Configuration for Apache Kafka Official Image
+      # KRaft Mode Configuration
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:${KAFKA_PORT_CONTROLLER}
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
 
       # Listener Configuration
-      KAFKA_LISTENERS: PLAINTEXT://:${KAFKA_PORT_INTERNAL},CONTROLLER://:${KAFKA_PORT_CONTROLLER},EXTERNAL://:${KAFKA_PORT_EXTERNAL}
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_PORT_INTERNAL},EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:${KAFKA_PORT_EXTERNAL}
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -27,14 +29,14 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_NUM_PARTITIONS: 4
+      KAFKA_NUM_PARTITIONS: ${KAFKA_NUM_PARTITIONS}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: ${KAFKA_REPLICATION_FACTOR}
 
-      # Message Size (10MB)
       KAFKA_MESSAGE_MAX_BYTES: 10485760
       KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
 
-      # Required for KRaft mode
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
     networks:
       - bigdata-net
     volumes:
@@ -53,7 +55,7 @@ services:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092 # Kết nối nội bộ qua port 9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     depends_on:
       kafka:
         condition: service_healthy
@@ -66,19 +68,23 @@ services:
   spark-master:
     build:
       context: .
-      dockerfile: ${SPARK_DOCKERFILE}
-    image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
+      dockerfile: spark.Dockerfile
+    image: my-apache-spark:3.5
     container_name: spark-master
     hostname: spark-master
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     ports:
       - "${SPARK_MASTER_WEBUI_PORT}:8080"
-      - "${SPARK_MASTER_RPC_PORT}:7077"
+      - "7077:7077"
+    env_file:
+      - .env
     environment:
       - SPARK_CONF_DIR=/opt/spark/conf
+      - PYTHONPATH=/opt
     volumes:
       - ./data:/opt/data
       - ./src:/opt/src
+      - ./scripts:/opt/scripts
     depends_on:
       kafka:
         condition: service_healthy
@@ -89,34 +95,40 @@ services:
   # 3. SPARK WORKER
   # -----------------------------------------------------------
   spark-worker:
-    image: ${SPARK_IMAGE_NAME}:${SPARK_VERSION}
-    container_name: spark-worker
-    # Kết nối tới spark-master qua hostname
+    image: my-apache-spark:3.5
+    # container_name: spark-worker
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_CORES=${SPARK_WORKER_CORES}
       - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY}
+      - PYTHONPATH=/opt
+    env_file:
+      - .env
     depends_on:
       - spark-master
     volumes:
       - ./data:/opt/data
       - ./src:/opt/src
+      - ./scripts:/opt/scripts
     networks:
       - bigdata-net
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
 
   # -----------------------------------------------------------
   # 4. MINIO (Data Lake)
   # -----------------------------------------------------------
   minio:
-    image: ${MINIO_IMAGE}
+    image: minio/minio:latest
     container_name: minio
     ports:
-      - "${MINIO_API_PORT}:9000"
+      - "9000:9000"
       - "${MINIO_CONSOLE_PORT}:9001"
     command: server /data --console-address ":9001"
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    env_file:
+      - .env
     networks:
       - bigdata-net
     volumes:
@@ -126,63 +138,153 @@ services:
   # 5. MONGODB (Database)
   # -----------------------------------------------------------
   mongodb:
-    image: ${MONGO_IMAGE}
+    image: mongo:latest
     container_name: mongodb
     ports:
-      - "${MONGO_PORT}:27017"
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
     networks:
       - bigdata-net
 
   # -----------------------------------------------------------
-  # 6. ETCD (Metadata Storage for Milvus)
+  # 6. JOBS & APPS (Đổi tên & Thêm mới)
   # -----------------------------------------------------------
+  # [JOB] Service đồng bộ Master Data vào MongoDB hàng ngày
+  job-sync-master:
+    image: my-apache-spark:3.5
+    container_name: job-sync-master
+    user: root
+    depends_on:
+      - mongodb
+      - spark-master
+    env_file:
+      - .env
+    environment:
+      - PYTHONPATH=/opt
+    volumes:
+      - ./src:/opt/src
+      - ./data:/opt/data
+    command: >
+      /bin/bash -c "
+        echo '🚀 Starting Master Data Sync Job...';
+        python3 -u /opt/src/pipelines/batch/import_master_songs.py;
+        echo '✅ Sync Success! Sleeping for 24 hours...';
+        "
+    networks:
+      - bigdata-net
+
+  job-producer:
+    image: my-apache-spark:3.5
+    container_name: music_log_producer
+    depends_on:
+      - kafka
+    env_file:
+      - .env
+    environment:
+      - PYTHONPATH=/opt
+    volumes:
+      - ./src:/opt/src
+      - ./data:/opt/data
+    # Thay đường dẫn bên dưới bằng đường dẫn thực tế tới file Python producer của bạn
+    # command: ["python3", "/opt/src/pipelines/ingestion/producer.py"] 
+    networks:
+      - bigdata-net
+    restart: on-failure
+
+  job-consumer:
+    image: my-apache-spark:3.5
+    container_name: music_spark_streaming
+    depends_on:
+      - kafka
+      - spark-master
+      - minio
+    env_file:
+      - .env
+    environment:
+      - PYTHONPATH=/opt
+      - SPARK_MASTER_URL=spark://spark-master:7077
+    volumes:
+      - ./src:/opt/src
+      - ./scripts:/opt/scripts
+      - ./data:/opt/data
+    # command: >
+    #   /opt/spark/bin/spark-submit 
+    #   --master spark://spark-master:7077
+    #   /opt/src/pipelines/ingestion/kafka_to_minio.py
+    networks:
+      - bigdata-net
+    restart: on-failure
+
+  # [APP] Service mới cho Web/API
+  backend:
+    build:
+      context: .
+      dockerfile: docker/api.Dockerfile
+    container_name: music_backend
+    ports:
+      - "8000:8000"
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017
+      - REDIS_HOST=redis
+      - MILVUS_HOST=milvus
+      - PYTHONPATH=/app/src
+    depends_on:
+      - mongodb
+      - redis
+      - milvus
+    volumes:
+      # Map code để Hot Reload
+      - ./src:/app/src
+      - ./scripts:/app/scripts
+    networks:
+      - music_net
+
   etcd:
     image: quay.io/coreos/etcd:v3.5.5
     container_name: milvus-etcd
     environment:
-      - ETCD_AUTO_COMPACTION_MODE=revision
-      - ETCD_AUTO_COMPACTION_RETENTION=1000
-      - ETCD_QUOTA_BACKEND_BYTES=4294967296
-      - ETCD_SNAPSHOT_COUNT=50000
+      - ETCD_AUTO_COMPACTION_RETENTION_RENDER_BY_HOUR=1
+      - ETCD_LOG_LEVEL=warn
     volumes:
-      - etcd_data:/etcd
-    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+      - etcd_data:/bitnami/etcd/data
+    networks:
+      - bigdata-net
     healthcheck:
       test: [ "CMD", "etcdctl", "endpoint", "health" ]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  milvus:
+    image: milvusdb/milvus:v2.3.15
+    container_name: milvus-standalone
+    ports:
+      - "19530:19530"
+    environment:
+      - ETCD_ENDPOINTS=etcd:2379
+      - MINIO_ADDRESS=minio:9000
+      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
+      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
+    env_file:
+      - .env
+    depends_on:
+      - minio
+      - etcd
+    command: [ "milvus", "run", "standalone" ]
+    volumes:
+      - milvus_data:/var/lib/milvus
     networks:
       - bigdata-net
 
-  # -----------------------------------------------------------
-  # 7. MILVUS (Vector Database)
-  # -----------------------------------------------------------
-  milvus:
-    image: milvusdb/milvus:v2.3.3
-    container_name: milvus-standalone
-    command: [ "milvus", "run", "standalone" ]
-    environment:
-      ETCD_ENDPOINTS: etcd:2379
-      MINIO_ADDRESS: minio:9000
-      MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
-      MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
-    volumes:
-      - milvus_data:/var/lib/milvus
+  redis:
+    image: redis:7.2-alpine
+    container_name: music_recsys_redis
     ports:
-      - "${MILVUS_PORT}:19530"
-      - "${MILVUS_GRPC_PORT}:9091"
-    depends_on:
-      - etcd
-      - minio
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:9091/healthz" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 90s
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
     networks:
       - bigdata-net
 
@@ -197,3 +299,4 @@ volumes:
   minio_data:
   etcd_data:
   milvus_data:
+  redis_data:
