--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
   spark-master:
     build:
       context: .
-      dockerfile: docker/spark.Dockerfile
+      dockerfile: data_pipeline/spark.Dockerfile
     image: my-apache-spark:3.5
     container_name: spark-master
     hostname: spark-master
@@ -79,11 +79,11 @@ services:
       - .env
     environment:
       - SPARK_CONF_DIR=/opt/spark/conf
-      - PYTHONPATH=/opt
+      - PYTHONPATH=/opt/src
     volumes:
       - ./data:/opt/data
-      - ./src:/opt/src
-      - ./scripts:/opt/scripts
+      - ./data_pipeline:/opt/src
+      - ./common:/opt/src/common
     depends_on:
       kafka:
         condition: service_healthy
@@ -100,15 +100,15 @@ services:
     environment:
       - SPARK_WORKER_CORES=${SPARK_WORKER_CORES}
       - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY}
-      - PYTHONPATH=/opt
+      - PYTHONPATH=/opt/src
     env_file:
       - .env
     depends_on:
       - spark-master
     volumes:
       - ./data:/opt/data
-      - ./src:/opt/src
-      - ./scripts:/opt/scripts
+      - ./data_pipeline:/opt/src
+      - ./common:/opt/src/common
     networks:
       - bigdata-net
     deploy:
@@ -160,14 +160,15 @@ services:
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/opt
+      - PYTHONPATH=/opt/src
     volumes:
-      - ./src:/opt/src
+      - ./data_pipeline:/opt/src
       - ./data:/opt/data
+      - ./common:/opt/src/common
     command: >
       /bin/bash -c "
         echo '🚀 Starting Master Data Sync Job...';
-        python3 -u /opt/src/pipelines/batch/import_master_songs.py;
+        python3 -u /opt/src/batch/import_master_songs.py;
         echo '✅ Sync Success! Sleeping for 24 hours...';
         "
     networks:
@@ -181,12 +182,12 @@ services:
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/opt
+      - PYTHONPATH=/opt/src
     volumes:
-      - ./src:/opt/src
+      - ./data_pipeline:/opt/src
       - ./data:/opt/data
-    # Thay đường dẫn bên dưới bằng đường dẫn thực tế tới file Python producer của bạn
-    # command: ["python3", "/opt/src/pipelines/ingestion/producer.py"] 
+      - ./common:/opt/src/common
+    # command: ["python3", "/opt/src/ingestion/producer.py"] 
     networks:
       - bigdata-net
     restart: on-failure
@@ -201,16 +202,16 @@ services:
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/opt
+      - PYTHONPATH=/opt/src
       - SPARK_MASTER_URL=spark://spark-master:7077
     volumes:
-      - ./src:/opt/src
-      - ./scripts:/opt/scripts
+      - ./data_pipeline:/opt/src
       - ./data:/opt/data
+      - ./common:/opt/src/common
     # command: >
     #   /opt/spark/bin/spark-submit 
     #   --master spark://spark-master:7077
-    #   /opt/src/pipelines/ingestion/kafka_to_minio.py
+    #   /opt/src/ingestion/kafka_to_minio.py
     networks:
       - bigdata-net
     restart: on-failure
@@ -221,7 +222,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: docker/api.Dockerfile 
+      dockerfile: backend/api.Dockerfile
     container_name: music_backend
     ports:
       - "8000:8000"
@@ -229,26 +230,29 @@ services:
       - MONGO_URI=mongodb://mongodb:27017
       - REDIS_HOST=redis
       - MILVUS_HOST=milvus
-      - PYTHONPATH=/app/src
+      - PYTHONPATH=/app
     depends_on:
       - mongodb
       - redis
       - milvus
     volumes:
-      # Map code để Hot Reload
-      - ./src:/app/src
-      - ./scripts:/app/scripts
+      - ./backend/app:/app/app
+      - ./common:/app/common
+    command: python -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     networks:
-      - music_net
+      - bigdata-net
 
   etcd:
     image: quay.io/coreos/etcd:v3.5.5
     container_name: milvus-etcd
     environment:
-      - ETCD_AUTO_COMPACTION_RETENTION_RENDER_BY_HOUR=1
+      - ETCD_AUTO_COMPACTION_RETENTION=1
       - ETCD_LOG_LEVEL=warn
+      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
+      - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+      - ETCD_DATA_DIR=/etcd-data
     volumes:
-      - etcd_data:/bitnami/etcd/data
+      - etcd_data:/etcd-data
     networks:
       - bigdata-net
     healthcheck:
