--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,6 @@ test_*.py
 # ============================================================
 # Docker volumes & generated files
 # ============================================================
-enrichment/
 *.jar
 *.zip
 
@@ -95,3 +94,5 @@ Thumbs.db
 *.onnx
 *.h5
 models/
+verify_*.py
+test_hybrid_api.py
