--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,12 +228,11 @@ services:
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - REDIS_HOST=redis
-      - MILVUS_HOST=milvus
+      - MILVUS_HOST=milvus-standalone
       - PYTHONPATH=/app
     depends_on:
       - mongodb
       - redis
-      - milvus
     volumes:
       - ./backend/app:/app/app
       - ./common:/app/common
