--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
       KAFKA_LOG_DIRS: /var/lib/kafka/data
+
+      KAFKA_HEAP_OPTS: "-Xmx400M -Xms400M"
     networks:
       - bigdata-net
     volumes:
@@ -73,11 +75,12 @@ services:
     hostname: spark-master
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     ports:
-      - "${SPARK_MASTER_WEBUI_PORT}:8080"
+      - "9090:9090"
       - "7077:7077"
     env_file:
       - .env
     environment:
+      - SPARK_MASTER_WEBUI_PORT=9090
       - SPARK_CONF_DIR=/opt/spark/conf
       - PYTHONPATH=/opt/src
     volumes:
@@ -125,7 +128,7 @@ services:
     container_name: minio
     ports:
       - "9000:9000"
-      - "${MINIO_CONSOLE_PORT}:9001"
+      - "9001:9001"
     command: server /data --console-address ":9001"
     env_file:
       - .env
@@ -140,6 +143,11 @@ services:
   mongodb:
     image: mongo:latest
     container_name: mongodb
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "27017:27017"
     volumes:
@@ -150,7 +158,7 @@ services:
   # -----------------------------------------------------------
   # 6. JOBS & APPS (Đổi tên & Thêm mới)
   # -----------------------------------------------------------
-  # [JOB] Service đồng bộ Master Data vào MongoDB hàng ngày
+  # Service đồng bộ Master Data vào MongoDB hàng ngày
   job-sync-master:
     image: my-apache-spark:3.5
     container_name: job-sync-master
@@ -169,68 +177,24 @@ services:
     command: >
       /bin/bash -c "
         echo 'Starting Master Data Sync Job...';
-        python3 -u /opt/src/batch/import_master_songs.py;
+        python3 -u /opt/src/batch/import_songs_master_data.py;
+        python3 -u /opt/src/batch/import_users_master_data.py;
         echo 'Sync Success! Sleeping for 24 hours...';
         "
     networks:
       - bigdata-net
 
-  job-producer:
-    image: my-apache-spark:3.5
-    container_name: music-log-producer
-    depends_on:
-      - kafka
-    env_file:
-      - .env
-    environment:
-      - PYTHONPATH=/opt/src
-    volumes:
-      - ./data_pipeline:/opt/src
-      - ./data:/opt/data
-      - ./common:/opt/src/common
-    # command: ["python3", "/opt/src/ingestion/producer.py"] 
-    networks:
-      - bigdata-net
-    restart: on-failure
-
-  job-consumer:
-    image: my-apache-spark:3.5
-    container_name: music-spark-streaming
-    depends_on:
-      - kafka
-      - spark-master
-      - minio
-    env_file:
-      - .env
-    environment:
-      - PYTHONPATH=/opt/src
-      - SPARK_MASTER_URL=spark://spark-master:7077
-    volumes:
-      - ./data_pipeline:/opt/src
-      - ./data:/opt/data
-      - ./common:/opt/src/common
-    # command: >
-    #   /opt/spark/bin/spark-submit 
-    #   --master spark://spark-master:7077
-    #   /opt/src/ingestion/kafka_to_minio.py
-    networks:
-      - bigdata-net
-    restart: on-failure
-
   # [APP] Service mới cho Web/API
   backend:
     build:
-      context: ./backend
-      dockerfile: api.Dockerfile
+      context: .
+      dockerfile: /backend/api.Dockerfile
     container_name: music-backend
     ports:
       - "${WEB_APP_PORT}:8000"
     env_file:
       - .env
     environment:
-      - MONGO_URI=mongodb://mongodb:27017
-      - REDIS_HOST=redis
-      - MILVUS_HOST=milvus-standalone
       - PYTHONPATH=/app
     depends_on:
       - mongodb
@@ -241,7 +205,7 @@ services:
     volumes:
       - ./backend:/app
       - ./common:/app/common
-      - ./data:/opt/data
+      - ./data:/app/data
     command: python -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     networks:
       - bigdata-net
@@ -313,6 +277,29 @@ services:
       - redis_data:/data
     command: redis-server --appendonly yes
     networks:
+      - bigdata-net
+
+  orchestrator:
+    build:
+      context: .
+      dockerfile: data_pipeline/orchestrator.Dockerfile
+    container_name: pipeline-orchestrator
+    depends_on:
+      - spark-master
+      - kafka
+      - backend
+      - minio
+      - mongodb
+    env_file:
+      - .env
+    environment:
+      - PYTHONPATH=/opt/src
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock # Bắt buộc
+      - ./data_pipeline:/opt/src
+      - ./common:/opt/src/common
+    restart: always
+    networks:   
       - bigdata-net
 
 networks:
